--- a/styles/style.css
+++ b/styles/style.css
@@ -6,5 +6,239 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  background: linear-gradient(to bottom, #1c5380, #1c5380 15%, white 10%);
+  margin:10px;
+}
+article{
+  display:flex;
+  flex-direction: column-reverse;
+}
+.center{
+  text-align: center;
+}
+#iphones{
+max-width: 40%;
+}
+#instagram-logo-log-in{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 10px;
+}
+#instagram-logo{
+  max-width: 60%;
+}
+#log-in{
+display: flex;
+justify-content: space-around;
+align-items: center;
+background-color: #1c5380;
+background: linear-gradient(to bottom, #1c5380, #06365f);
+background-repeat: no-repeat;
+color:white;
+border-style:none;
+font-weight: bold;
+box-shadow: 1px 1px 10px #06365f;
+}
+#log-in > p{
+  font-size:16px;
+  margin-left:8px;
+  margin-right:8px;
+}
+#log-in > img{
+  padding: 0,2px,0,2px;
+  margin-left:8px;
+  margin-right:8px;
+}
+#white-box{
+  background-image: url(/images/frame.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+h1{
+  color: #06365f;
+  font-size: 25px;
+  text-align: left;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+p{
+  font-weight: 300;
+  margin-left: 30px;
+  margin-right: 30px;
+  text-justify: justify;
+}
+#download{
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+footer{
+  max-width: 100%;
+  align-items: center;
+}
+ul{
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-left: 16px;
+  margin-right: 16px;
+  padding: 0;
+}
+
+@media (min-width:1025px){
+  body {
+    font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    background: linear-gradient(to bottom, #1c5380, #1c5380 37%, white 20%);
+    margin:55px
+  }
+  article{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  #iphones{
+    max-width: 200%;
+    }
+  #photo-iphones{
+    margin:20px;
+  }
+ #instagram{
+   max-width: 45%;
+   margin-top: 25px;
+   margin-left: -150px;
+ }
+ h1{
+  color: #06365f;
+  font-size: 25px;
+  text-align: left;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-bottom: 0;
+  max-width: 48%;
+}
+p{
+  font-weight: 300;
+  margin-left: 50px;
+  margin-right: 50px;
+  text-justify: justify;
+}
+#instagram-logo-log-in{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 10px;
+  max-width: 90%;
+}
+#download{
+  text-align: left;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 50px;
+}
+footer{
+  max-width: 100%;
+}
+ul{
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-left: 250px;
+  margin-right: 250px;
+  padding: 0;
+}
+}
+@media (min-width:768px) and (max-width:1024px){
+  body {
+    font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    background: linear-gradient(to bottom, #1c5380, #1c5380 15%, white 10%);
+    margin:10px;
+  }
+  article{
+    display:flex;
+    flex-direction: column-reverse;
+  }
+  .center{
+    text-align: center;
+  }
+  #iphones{
+  max-width: 40%;
+  }
+  #instagram-logo-log-in{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 10px;
+  }
+  #instagram-logo{
+    max-width: 60%;
+  }
+  #log-in{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #1c5380;
+  background: linear-gradient(to bottom, #1c5380, #06365f);
+  background-repeat: no-repeat;
+  color:white;
+  border-style:none;
+  font-weight: bold;
+  box-shadow: 1px 1px 10px #06365f;
+  }
+  #log-in > p{
+    font-size:16px;
+    margin-left:8px;
+    margin-right:8px;
+  }
+  #log-in > img{
+    padding: 0,2px,0,2px;
+    margin-left:8px;
+    margin-right:8px;
+  }
+  #white-box{
+    background-image: url(/images/frame.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  h1{
+    color: #06365f;
+    font-size: 25px;
+    text-align: left;
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+  p{
+    font-weight: 300;
+    margin-left: 30px;
+    margin-right: 30px;
+    text-justify: justify;
+  }
+  #download{
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  footer{
+    max-width: 100%;
+    align-items: center;
+  }
+  ul{
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-left: 16px;
+    margin-right: 16px;
+    padding: 0;
+  }
 }
