--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,157 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+#iphone {
+  margin-top: 20px;
+  text-align: center;
+}
+#iphonefoto{
+  width: 65%;
+}
+#instagram{
+  width: 60%;
+}
+.btn-login{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #1C5380;
+  background: linear-gradient(to bottom, #1C5380, #06365F);
+  color:white;
+  border-style:none;
+  font-weight: bold;
+  box-shadow: 1px 1px 10px #06365F;
+  font-size: 0.4em;
+  padding: 0;
+  height: 20px;
+  width: 20%;
+/* background-color: #1c5380;
+color: white;
+font-size: 0.4em;
+padding: 0;
+height: 20px;
+width: 20%;
+font-weight: bold;
+text-align: center;
+vertical-align:middle;
+border: 1px solid #06365f;
+box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 3px 10px 0 rgba(0,0,0,0.19); */
+}
+.logo-casa {
+  width: 20%;
+
+}
+.container{ /*main */
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(0, white 60%, #1c5380 50%);
+}
+
+#all-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: -30px; 
+}
+
+.logo-insta{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.white-box-descriptive {
+  background-image: url(../images/frame.png);
+  background-size: cover;
+  width: 200px;
+  height: 150px; 
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.white-box-content h1{
+  font-size: 0.9em;
+  text-align: start;
+  padding-left: 10px;
+  color:#06365f;
+  font-weight: bold;
+}
+.white-box-content p{
+  font-size: 0.4em;
+  text-align: start;
+  padding-left: 10px;
+  color:#636e72;
+  width: 170px;
+}
+
+.store-logos{
+
+
+  
+}
+.logo-store{
+  width: 35%;
+  padding-top: 5px;
+  margin-left: 10px;
+}
+
+
+footer{
+padding: 10px 10px 10px 10px;
+text-align: center;
+margin-right: 10px;
+}
+.footer-links{
+  display: flex;
+  flex-direction: row;
+  font-size: 0.4em;
+  justify-content: space-around;
+  font-weight: 800;
+
+}
+.footer-links li{
+list-style: none;
+display: flex;
+justify-content: space-evenly;
+}
+.footer-links li a {
+  text-decoration: none;
+  color: #1c5380;
+
+}
+.footer-links li:last-child {
+  color: #636e72;
+}
+
+/* Tablet */
+@media only screen and (min-width:768px) and (max-width:1024px){
+  #iphone { margin-left: -50px; margin-top: 40px;width: 55%;}
+  .btn-login{font-size: 0.8em;height: 30px;margin-left: 20%;}
+  .logo-insta{margin-top: -10%;}
+  .white-box-descriptive {width: 400px;height: 270px;}
+  .white-box-content h1{font-size: 1.7em;margin-top: 3%;padding-left: 15px;margin-bottom: 0;}
+  .white-box-content p{font-size: 0.9em;padding-left: 15px;width: 380px;}
+  footer{margin-top: 20px;}
+  .footer-links{font-size: 0.6em;justify-content: center;}
+  .footer-links li{margin-left: 15px;}
+}
+/* Desktop */
+@media (min-width:1024px){
+  #iphone {margin-top: 60px;margin-left: -150px;}
+  .logo-insta{margin-top: -20%; margin-left: -0%;}
+  .btn-login{font-size: 0.9em;height: 30px;margin-left: 20%; width: 120px;}
+  .white-box-descriptive {width: 450px;height: 350px;}
+  .white-box-content h1{font-size: 2em;margin-top: 3%;padding-left: 20px;}
+  .white-box-content p{font-size: 1.3em;padding-left: 15px;width: 410px;margin-right: 0px;}
+  footer{margin-top: 50px;}
+  .footer-links{font-size: 0.8em;justify-content: center;}
+  .footer-links li{margin-left: 20px;}
 }
