--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,36 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-body {
+/* MOBILE FIRST */
+@media (max-width: 768px) {
+  body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  
 }
+.download {
+  margin-left: 20px;
+    margin-right: 20px;
+    height: 55px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-content: space-between;
+    width: 375px;
+}
+
+
+
+/* FOOTER */
+  ul{
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    margin: 25px 10px 25px 10px;
+    padding: 20px 0 20px 0;
+    font-size: 10px;
+    color: #1c5380;
+  }
+
+} 
