--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,41 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
+
+html {
+  height: 100%;
+}
 body {
+  height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-size: cover;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: linear-gradient(to bottom ,#1c5380b5, #1c5380 40% , white 40% );
+}
+main{
+  height: 80%;
+  display: flex;
+  justify-content: space-around;
+
+}
+#phone-img{
+  display: flex;
+  width: 40%;
+  justify-content: center;
+  align-items: center;
+  padding-top: 5%;
+
+}
+#phone-img>img{
+  height: 80%;
+}
+
+#container{
+  padding-top: 10%;
+  display: flex;
+  flex-direction: column;
+  width: 60%;
 }
