--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,32 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: linear-gradient(to bottom,#06365f 0%, #06365f 50%, #06365f 30%,white 50%,white 100%);
+}
+
+.upper-container {
+  display:flex;
+  justify-content: space-around;
+  max-width: 768px;
+}
+
+.login-CTA {
+  display:flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.footer {
+  display:flex;
+  justify-content: space-between;
+  list-style: none;
+  max-width: 768px;
+  align-items: center;
+  color: #1c5380;
+  font-weight:bold;
+  margin:50px;
+}
+
+#trademark {
+  color: grey;
 }
