--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,94 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: linear-gradient(#1c5380 50%, white 50%);
+
+}
+
+section {
+  margin: 100px 100px 0px 100px;
+}
+
+#global-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 150px 150px 0px 150px;
+}
+
+#inner-container{
+  margin: 10%;
+}
+article {
+  background-image: url("/images/frame.png");
+  background-size: 95% 100%;
+  background-repeat: no-repeat;
+  padding: 20px 40px; 
+}
+
+article h2 {
+  margin: auto;
+  color: #06365f;
+}
+
+article p {
+  line-height: 1.6;
+  font-weight: 350;
+}
+button {
+  background: linear-gradient(to bottom, #1c5380 50%, #1c5380 50%);
+}
+
+ header {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+ }
+
+ button {
+   display: flex;
+   justify-content: space-evenly;
+   align-items: center;
+   height: 40px;
+   width: 100px;
+   font-size: medium;
+   font-weight: 700;
+   color: white;
+   margin-right: 40px;
+
+ }
+
+ .badges {
+   margin: 10px 10px 10px 0;
+ }
+
+ ul {
+   display: flex;
+   justify-content: space-between;
+   list-style-type: none;
+   margin: 0px 350px;
+   font-weight: 700;
+   color: #1c5380;
+ }
+
+ul #copyright{
+  opacity: 0.5;
+}
+
+@media only screen and (max-width: 601px) {
+  #global-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  ul {
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;;
+    font-weight: 700;
+    width:50%;
+    margin: auto;
+    color: #1c5380;
+  }
 }
