--- a/styles/style.css
+++ b/styles/style.css
@@ -103,9 +103,49 @@ ul {
   }
   .download {
     margin-top: 25px;
+    width: 400px;
+    height: 200px;
+    margin-left: 60px;
+    
   }
-  .img-download{
+  
+  .logo{margin-left: 50px;
+    margin-top: 20px;
+  }
+  .log-in {
+    width: 80px;
+    height: 20px;
+    border-left-width: 30px;
+    margin-left: 10px;
+    margin-right: 90px;
+    padding-left: 5px;
+  }
+  #phone {
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+#main {
+  margin-left: 90px;
     margin-right: 10px;
-  }
-  }
-
+    width: 600px;
+    height: 700px;
+    padding-right: 40px;
+    border-left-width: 30px;
+    padding-left: 40px;
+}
+ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  margin: 25px 10px 25px 10px;
+  padding: 20px 0 20px 0;
+  font-size: 16px;
+  color: #1c5380;
+  padding-left: 20px;
+  padding-right: 70px;
+  width:700px;
+  height: 80px;
+}
+}
