--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,102 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: #f5f6f8;
+}
+
+h1 {
+  color: #06365f;
+  margin-top: 0;
+  line-height: 1.3em;
+}
+
+p {
+  line-height: 1.7em;
+}
+
+.login {
+  color: white;
+  background-image: linear-gradient(180deg, #6c90af, #467398);
+  text-decoration: none;
+  border: 1px solid #06365f;
+  border-radius: 3px;
+  height: fit-content;
+  width: fit-content;
+  padding: 0.5em 1em 0.5em 0.5em;
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  font-size: 0.8rem;
+}
+
+.home-img {
+  margin: 0 0.5rem 0 0.2rem;
+}
+.content {
+  padding: 3rem;
+  padding-top: 2rem;
+  background-image: url("../images/frame.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  box-sizing: border-box;
+}
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 5rem 5rem 0 5rem;
+}
+
+.info {
+  width: 32rem;
+  margin-left: 3rem;
+}
+
+.instagram-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  align-content: center;
+  margin: 1rem;
+}
+
+.stores {
+  margin-top: 2rem;
+}
+.stores > img {
+  margin-right: 1rem;
+}
+
+footer {
+  margin: 2rem 5rem 5rem 5rem;
+  display: flex;
+  justify-content: space-around;
+}
+
+ul {
+  list-style: none;
+}
+
+li {
+  display: inline-block;
+  margin: 0 0.5rem;
+  color: #5f86a5;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 0.8rem;
+}
+
+li:last-child {
+  color: #b4b5b5;
+}
+
+.background {
+  position: absolute;
+  background-image: url("/images/bgtile.png");
+  background-repeat: repeat-x;
+  top: 0;
+  height: 280px;
+  width: 100%;
+  z-index: -1;
 }
