--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,147 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+html {
+  margin: 0;
+  padding: 0;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+
+
+
+
+}
+
+
+
+}
+.title {
+  width: 600px;
+}
+
+.insta {
+  display: flex;
+
+
+}
+
+div{
+  padding: 2em;
+}
+
+.container {
+  /* background-color:#457399; */
+  display: flex;
+  justify-content: space-evenly;
+  position: relative;
+
+}
+ul {
+  list-style: none;
+}
+
+footer ul {
+  /* width: 1200px; */
+  margin: 5em 8em;
+ display: flex;
+ justify-content: space-evenly;
+}
+footer {
+ color: #1c5380;
+ padding: 14px 0;
+}
+footer-ul li {
+ /* list-style-type: none; */
+ text-align: center;
+ color: #1c5380;
+}
+
+.principal {
+  /* background-color: white; */
+}
+
+.cameralogin {
+
+  display:flex;
+  align-items: stretch;
+  justify-content: space-between;
+}
+
+button {
+  background-color:#1c5380 ;
+  color:white;
+  height: 3em;
+  border-radius: 1px;
+  border-color: #06365f;
+
+
+
+
+}
+
+.colores {
+  position: absolute;
+  height: 50%;
+  width: 100%;
+  margin: 0;
+
+}
+
+.blue {
+  background-color: #1c5380;
+  height: 50%;
+  width: 100%;
+
+
+
+
+
+}
+
+/* .colorWhite {
+background-color: yellow;
+  height: 100%;
+
+} */
+
+.insbotons {
+  background-color: white;
+  border-radius: 10px;
+  border: 1px;
+  -webkit-box-shadow: 10px 10px 30px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 10px 10px 30px 0px rgba(0,0,0,0.75);
+box-shadow: 10px 10px 30px 0px rgba(0,0,0,0.75);
+
+
+}
+
+h1 {
+  color: #1c5380;
+
+}
+
+.myButton {
+	box-shadow:inset 0px -3px 7px 0px #1c5380;
+	background:linear-gradient(to bottom, #1c5380 5%, #648EAF 100%);
+	background-color:#1c5380;
+	border-radius:3px;
+	border:1px solid #0b0e07;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	padding:9px 23px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #263666;
+}
+.myButton:hover {
+	background:linear-gradient(to bottom, #648EAF 5%, #1c5380 100%);
+	background-color:#1c5380;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
 }
