--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,97 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+#imgBackground {
+  position: absolute;
+  width: 100%;
+  height: 300px;
+  background-repeat: repeat;
+  z-index: -1;
+}
+
+#center-body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+#image-iphone{
+  padding: 100px 30px 20px 120px;
+}
+
+#fondo-info{
+  padding: 5px 20px 0 20px;
+  background-image: url('.images/frame.png');
+  /* box-shadow: (0deg, rgba(255, 255, 255, 0) 0%, rgba(124, 124, 124, 1); */
+background: linear-gradient(0deg, rgba(249,249,249,0) 0%, rgba(255,255,255,1) 39%);  border-radius: 5px;
+}
+
+.same-line{
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start; 
+  margin-bottom: 10px;
+}
+
+.same-line li{
+  list-style-type: none;
+  padding: 0;
+}
+
+#box-text{
+  padding: 0 150px 0 30px;
+}
+
+#boton-login{
+  padding: 5px;
+  background-color: #cee6fa;
+  border: 1.5px solid #1c5380;
+  width: 90px;
+  margin: 20px 0 0 50px;
+  border-radius: 3px;
+  background: linear-gradient(0deg, rgba(56, 104, 143, 1) 0%, rgba(71, 120, 161, 1) 53%)
+}
+  
+#inside-boton{
+  margin: 10px;
+}
+
+#img-padding{
+  margin-left: 40px;
+}
+
+.img{
+  padding: 50px;
+}
+
+h3{
+  margin: 0;
+  color: gainsboro;
+  font-size: 14px;
+}
+
+h1{
+  color: #1c5380;
+  font-size: 24px;
+}
+a {
+  text-decoration:none;
+}
+p {
+  font-size: 16px;
+ font-weight: 400;
+}
+.bold { 
+  font-weight: 600;
+}
+.words {
+  font-size: 10px;
+  font-weight: bold;
+  color: #1c5380;
+padding: 0 260px 80px 260px;
+}
+.insta{
+  color: grey;
+}
