--- a/styles/style.css
+++ b/styles/style.css
@@ -10,16 +10,16 @@ html {
   height: 100%;
 }
 body {
-  height: 100%;
-  margin: 0;
+  min-height: 100%;
   background-repeat: no-repeat;
   background-size: cover;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   background: linear-gradient(to bottom ,#1c5380b5, #1c5380 40% , white 40% );
 }
+
 main{
-  height: 80%;
+  height: 90%;
   display: flex;
   justify-content: space-around;
 
@@ -33,12 +33,123 @@ main{
 
 }
 #phone-img>img{
+  
   height: 80%;
+                                                                                                                                                                                                                                                                               ;
 }
+
 
 #container{
   padding-top: 10%;
   display: flex;
   flex-direction: column;
   width: 60%;
+  margin-right: 6%;
+}
+
+#logo-login{
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+}
+#logo-login>img{
+  margin-left: 1%;
+}
+#logo-login>a{
+  display: flex;
+  background: linear-gradient(to bottom, #f6fbff45, #316a98);
+  text-decoration: none;
+  align-items: center;
+  justify-content: space-between;
+  width: 80px;
+  padding: 5px;
+  margin-right: 2%;
+  color: white;
+  border-radius: 3px 3px 3px 3px;
+ 
+  
+}
+
+#container>article{
+  background-image: url("/images/frame.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-left: 5%;
+  padding-right: 5%;
+
+}
+
+#container>article h2{
+  color:#06365f ;
+}
+
+
+#mobile-store{
+  display: flex;
+  justify-content: space-around;
+  width: 60%;
+  padding-left: 5%;
+  margin-top: 20px;
+}
+
+footer{
+  margin-top: 40px;
+}
+.nav-bar {
+  
+  display: flex;
+  justify-content: center;
+  padding-top:6px;
+  padding-bottom:6px;
+  width: 100%;
+  
+  
+}
+.nav-bar-ul{
+  width: 50%;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+
+}
+.nav-bar-ul > li{
+  list-style-type: none;                                                                                                                                                                                                                                                                                
+  font-weight: 800;
+  color: gray;
+  text-transform: uppercase;
+  font-size: 0.7rem;
+  
+}
+.nav-bar a{
+  text-decoration: none;
+  color: #1c5380; 
+}
+
+@media (max-width: 1000px) {
+
+  main{
+    margin-top: 10%;
+  }
+
+  #phone-img>img{
+    height: 300px;                                                                                                                                                                                                                                                                             ;
+  }
+  #mobile-store img{
+    height:40px;
+  }
+  article{
+    font-size: 0.8rem;
+  }
+
+}
+@media (max-width: 720px) {
+  main{
+    margin-top: 15%;
+  }
+  #logo-login>img{
+    width: 60%;
+  }
+  #mobile-store{
+    width: 80%;
+  }
 }
