--- a/styles/style.css
+++ b/styles/style.css
@@ -7,30 +7,99 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-  background: linear-gradient(to bottom,#06365f 0%, #06365f 50%, #06365f 30%,white 50%,white 100%);
+  background: linear-gradient(to bottom,  #1c5380 40%, #ffffff 40%);
+  background-repeat: no-repeat;
 }
 
 .upper-container {
   display:flex;
-  justify-content: space-around;
-  max-width: 768px;
+  justify-content: center;
+  width: 60%;
+  align-items: center;
+  margin-left: 20%;
+  padding-top: 6%;
+}
+
+.container-wrap {
+  width: 100%;
+  height: auto;
+  padding: 1em;
+  align-content: center;
+}
+
+.container-wrap.image {
+  float: left;
+}
+
+.container-wrap.right-text {
+  float: right;
+  display: flex;
+  flex-direction: column;
+}
+
+.logo-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo-bar > img {
+  max-width: 100%;
+  height: auto;
 }
 
 .login-CTA {
-  display:flex;
-  justify-content: space-between;
   padding: 10px;
+  background-image: url("/images/home.png");
+  background-repeat: no-repeat;
+  background-position: center left 4px;
+  text-align: right;
+  align-content: center;
+  width: 20%;
+  height: 15%;
+  color: #ffffff;
+  font-weight: 700;
+  background-color: linear-gradient( rgba(255,255,255,1) 0%, rgba(246,246,246,1) 0%, rgba(28,83,128,1) 69%, rgba(28,83,128,1) 74%);
+  border-radius: 4px 4px 4px 4px;
+  margin: 4px 2px;
 }
 
-.footer {
+.main-body {
+  background-image: url("/images/frame.png");
+  background-repeat: no-repeat;
+  padding: 5%;
+}
+
+.main-body > h1 {
+  line-height: 1.2em;
+  color: #06365f;
+}
+
+.download-app {
+  display: flex;
+  justify-content: space-arround;
+}
+
+.download-app > img {
+  margin: 0.5em;
+}
+
+footer {
+  padding: 0px 0px 30px 0px;
+  height: 10%;
+}
+
+.footer-links {
   display:flex;
   justify-content: space-between;
+  align-content: center;
   list-style: none;
-  max-width: 768px;
-  align-items: center;
+  width: 40%;
   color: #1c5380;
   font-weight:bold;
-  margin:50px;
+  margin-block-start: 2em;
+  margin-block-end: 1em;
+  margin-inline-start: 25%;
 }
 
 #trademark {
