--- a/styles/style.css
+++ b/styles/style.css
@@ -7,8 +7,7 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-  background: linear-gradient(to bottom,  #1c5380 40%, #ffffff 40%);
-  background-repeat: no-repeat;
+  background: linear-gradient(to bottom, #1c5380, #1c5380 35%, white 10%);
 }
 
 .upper-container {
@@ -39,7 +38,7 @@ body {
 
 .logo-bar {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -59,15 +58,28 @@ body {
   height: 15%;
   color: #ffffff;
   font-weight: 700;
-  background-color: linear-gradient( rgba(255,255,255,1) 0%, rgba(246,246,246,1) 0%, rgba(28,83,128,1) 69%, rgba(28,83,128,1) 74%);
+  box-shadow: #06365f;  
   border-radius: 4px 4px 4px 4px;
   margin: 4px 2px;
+
+}
+
+
+button {
+  background-color:#1c5380;
+  background: linear-gradient(to bottom, #06365f, #1c5380);
 }
 
 .main-body {
-  background-image: url("/images/frame.png");
+  background-image: url(/images/frame.png);
+  background-size: cover;
   background-repeat: no-repeat;
-  padding: 5%;
+  background-size: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  padding: 5% 10%;
 }
 
 .main-body > h1 {
@@ -82,11 +94,11 @@ body {
 
 .download-app > img {
   margin: 0.5em;
+  padding-left: 5%;
 }
 
 footer {
-  padding: 0px 0px 30px 0px;
-  height: 10%;
+  height: 20%;
 }
 
 .footer-links {
@@ -97,10 +109,10 @@ footer {
   width: 40%;
   color: #1c5380;
   font-weight:bold;
-  margin-block-start: 2em;
-  margin-block-end: 1em;
-  margin-inline-start: 25%;
-}
+  margin-right: 30%;
+  margin-left: 30%;
+  padding-top: 2em;
+} 
 
 #trademark {
   color: grey;
