--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,94 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+html {
+  font-family: helvetica, arial, sans-serif;
+  letter-spacing: 1px;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.container-top {
+  background-image: url("../images/bgtile.png");
+  width: 100%;
+  height: 300px;
+}
+
+.column1 {
+  float: left;
+  width: 40%;
+  padding: 10px;
+  height: 300px;
+  position: relative;
+}
+
+.imgIphone {
+  right: 50px;
+  bottom: -30px;
+  position: absolute;
+}
+
+.buttonLogin {
+  background-image: url("../images/bgtile.png");
+  border: #06365f solid 2px;
+  width: 100px;
+  height: 35px;
+  color: white;
+  margin-left: 70px;
+  border-radius: 2px;
+  border: none;
+  padding-bottom: 9px;
+}
+
+.imgHouse {
+  padding-right: 5px;
+  margin-left: -10px;
+}
+
+.column2 {
+  float: left;
+  width: 60%;
+  padding: 10px;
+  height: 300px;
+  position: relative;
+}
+
+.logoYBoton{
+  position: absolute;
+  margin-top: -180px;
+}
+
+.logo {
+  margin-top: 0px;
+  margin-left: 0px;
+}
+
+h2 {
+  color: #06365f;
+}
+
+.textContainer {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  padding: 30px;
+  position: absolute;
+}
+
+ul{
+  list-style: none;
+}
+
+li{
+  display: inline;
+}
+
+.footer{
+  padding-top: 30px;
 }
