--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,74 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: white;
 }
+.background{
+  background-color:rgb(66, 64, 145);
+  width: 100%; 
+  height:400px; 
+  margin:0 auto;
+  background-size: 100px  100%;
+  position: relative;
+}
+h1 {
+  color: rgb(1, 1, 100);
+  text-decoration: none
+};
+
+.logo-log{
+  display: flex;
+  flex-direction: row;
+}
+
+.phone {
+  display: flex;
+  margin-top:50px;
+ padding: 20px 30px 0px 60px;
+};
+
+.ig-logo {
+  display: flex;
+  margin-left: 400px;
+}
+
+.box-paragraph{
+  color: black;
+  text-decoration: none;
+}
+.section1{
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  margin-top: 40px;
+}
+ .text{
+   padding: 50px 20px 50px 580px;
+   border-radius: 8px;
+   border: 2px
+   
+ }
+.home-btn{
+  text-decoration: none;
+  border: 2px black;
+  padding: 7px 15px;
+  background-color: rgb(63, 92, 138);
+  color: white;
+  display: inline-block;
+  align-items:flex-end ;
+  font-weight: bold;
+  border-radius: 4px;
+  
+
+}
+.bottons {
+  display: flex;
+  flex-direction: row;
+  padding: 30px 20px 50px 20px;
+  align-items: space-around;
+}
+
+footer {
+  margin: 2rem 5rem 5rem 5rem;
+  display: flex;
+  justify-content: space-around;
