--- a/styles/style.css
+++ b/styles/style.css
@@ -12,5 +12,24 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+}
+
+main {
+  
+}
+
+/* Background styles */
+.blue-background {
+  height: 57vh;
+  background: rgb(6,54,95);
+  background: linear-gradient(0deg, rgba(6,54,95,1) 35%, rgba(28,83,128,1) 100%);
+
+}
+/* Main styles */
+.container-main {
+  display: flex;
+}
+.container-right {
+  display: flex;
+  flex-direction: column;
 }
