--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,20 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: #06365f;
+  margin: 100px;
 }
+
+
+.leftright{
+  display: flex;
+  flex-direction: row;
+}
+
+.navigationbar{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+
