--- a/styles/style.css
+++ b/styles/style.css
@@ -7,8 +7,9 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color:#06365f;
 }
 
 header {
-  
+
 }
