--- a/styles/style.css
+++ b/styles/style.css
@@ -3,16 +3,18 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   
 }
 
-header {
-  background-color:#06365f;
+
+head {
+background-color:#06365f;
 }
+
+
 
 .footer {
   text-transform: uppercase;
