--- a/styles/style.css
+++ b/styles/style.css
@@ -27,4 +27,9 @@ body {
 
 .footer ul { 
   display: flex;
-  flex-direction: row;}
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+}
+  
