--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,76 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 400 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  color: #252424;
+}
+.hero {
+  background: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  display: flex;
+  padding: 100px 100px 50px;
+  justify-content: center;
+}
+
+.img-phones {
+  width: 30%;
+}
+.info {
+  width: 40%;
+}
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+a.log-in-button img {
+  width: 18px;
+  margin-right: 5px;
+}
+a.log-in-button {
+  text-decoration: none;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 700;
+  padding: 9px 16px;
+  background: linear-gradient(to bottom, #7ea3c3 5%, #3b6890 100%);
+  border-radius: 3px;
+  border: 1px solid #07365f;
+}
+.contain {
+  background: url(../images/frame.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 40px;
+}
+h1 {
+  color: #06365f;
+  margin: 0;
+  width: 60%;
+}
+nav ul {
+  display: flex;
+    list-style: none;
+}
+nav ul li{
+  margin: 0 20px;
+}
+footer {
+ 
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+nav ul li a{
+  color:#1c5380 ;
+  text-decoration: none;
+}
+footer p {
+  color: #ccc;
 }
