--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,10 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   background-color:#06365f;
+  background-image: url(images/frame.png) ;
 }
+
+
 
 .log-in-button {
   background-color: #06365f;
