--- a/styles/style.css
+++ b/styles/style.css
@@ -6,8 +6,8 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image:url(images/frame.png);
   background-color:#06365f;
-  background:url(images/frame.png);
 }
 
 
