--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,7 @@ body {
   sans-serif;
   font-size: 16px;
   font-weight: 200;
+  letter-spacing: 1.5;
   background-color: #fff;
   background-image: url(/images/bgtile.png);
   background-position: top;
@@ -32,17 +33,6 @@ main {
   margin: 6rem auto;
 }
 
-h1 {
-  color: #06365f;
-  font-size: 1.6rem;
-  letter-spacing: 1.5;
-}
-
-p {
-  font-size: 1.25rem;
-  letter-spacing: 1.5;
-}
-
 section {
   width: 40%;
 }
@@ -55,33 +45,51 @@ section header {
 }
 
 section header img {
-  width: 60%;
+  width: 50%;
 }
 
 section header a {
+  width: 15%;
   color: #fff;
   text-decoration: none;
-  font-weight: 700;
+  font-weight: 600;
   padding: .8em;
   display: flex;
   align-items: center;
   /* background: #1c5380; */
   background: linear-gradient(#709fc5, #16619e);
   border-radius: 5%;
-  box-shadow: 1px 2px 2px #06365f;
+  box-shadow: 0 2px 2px #06365f;
+  transition: all 1s ease;
+}
+
+section header a:hover {
+  background: #709fc5;
 }
 
 section header a img {
+  width: 30px;
   margin-right: 1em;
 }
 
 section article {
-  padding: 1em 2em;
+  padding: 2em;
   background-image: url(/images/frame.png);
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
-  background-size: cover;
-  border: 3px solid red;
+  background-size: 100%;
+}
+
+section article h1 {
+  color: #06365f;
+  font-size: 2rem;
+  margin: 1rem 0;
+}
+
+section article p {
+  font-size: 1.2rem;
+  line-height: 1.5;
+  margin: 1em 0;
 }
 
 section article img {
@@ -113,6 +121,11 @@ footer ul a {
   color: #1c5380;
   font-weight: 600;
   margin-right: 1.5em;
+  transition: color .5s ease;
+}
+
+footer ul a:hover {
+  color: #000;
 }
 
 footer p {
