--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,8 @@ body {
 
 .section-1 {
   flex-direction: row;
+  padding: 40px;
+  display: flex;
   width: 100%;
   justify-content: space-around;
   margin-bottom: 100px;
